hard-gists/8e4bea946ab9c05347fe/run.log
=== Docker Run Log for 8e4bea946ab9c05347fe ===
Started at: Mi 29. Okt 18:12:03 CET 2025

[2025-10-29 18:12:04] START: Running container for 8e4bea946ab9c05347fe
[2025-10-29 18:12:04] SUCCESS: Container f5d42941340caa6acb63cfbf7fcf40f097b25f268eef52bc5a74be61711f8035 started for 8e4bea946ab9c05347fe
=== Container logs for 8e4bea946ab9c05347fe ===
  File "/snippet.py", line 6
    print u'OpenCV Version:'+cv2.__version__
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8e4bea946ab9c05347fe ===
[2025-10-29 18:12:06] INFO: Container f5d42941340caa6acb63cfbf7fcf40f097b25f268eef52bc5a74be61711f8035 has stopped
